<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_banner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="2:1"
                android:contentDescription="@string/poster_detail"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16sdp"
                android:contentDescription="@string/favorite"
                app:layout_constraintTop_toBottomOf="@id/iv_banner"
                app:layout_constraintBottom_toBottomOf="@id/iv_banner"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:contentDescription="@string/poster"
                android:scaleType="fitXY"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintDimensionRatio="10:15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_banner" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                tools:text="@string/title"
                android:theme="@style/TextTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="@id/iv_poster" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                tools:text="@string/release_date"
                android:theme="@style/TextDescription"
                app:drawableStartCompat="@drawable/ic_date_range"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_vote_average"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                tools:text="@string/vote_average"
                android:theme="@style/TextDescription"
                app:drawableStartCompat="@drawable/ic_star"
                app:drawableTint="@android:color/holo_orange_light"
                app:layout_constraintStart_toStartOf="@+id/tv_release_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_vote_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center_vertical"
                tools:text="@string/vote_count"
                android:theme="@style/TextDescription"
                app:drawableStartCompat="@drawable/ic_person"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_vote_average"
                app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

            <TextView
                android:id="@+id/tv_title_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                tools:text="@string/storyline"
                android:textStyle="bold"
                android:theme="@style/TextDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                tools:text="@string/lorem"
                android:theme="@style/TextDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>